Add LinearAlgebra dep. Add Safetestsets

--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,15 @@ uuid = "83d0fb94-8693-4854-8e49-c7241ca7035b"
 authors = ["Shion Matsumoto"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
 [compat]
 julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 
 [targets]
-test = ["Test"]
+test = ["Test","SafeTestsets"]
